# nihongopractice

./: .gitignore  Cargo.toml  bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
docs/: 0.bootstrap.js  1.bootstrap.js  1.index.js  CNAME  bootstrap.js  index.html  index.js  package-lock.json
docs/clips/: index.html
pkg/: package.json  potential.js  potential_bg.d.ts  potential_bg.wasm
scripts/: deploy.sh
src/: app.rs  lib.rs  main.rs  mdc.rs  utils.rs  view.rs
src/data/: mod.rs  shadow.in  verbs.in
src/idle/: view.rs
src/recognition/: mod.rs  round.rs  step.rs  view.rs
src/shadow/: core.rs  mod.rs  view.rs
src/utils/: mod.rs
src/verb/: core.rs  mod.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json
www/.bin/: create-wasm-app.js
