[package]
name = "potential"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.10"
console_error_panic_hook = { version = "0.1.1", optional = true }
log = "0.4"
web_logger = "0.2"
yew = { version = "0.14.3", features = ["web_sys"] }
rand = "0.7.3"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  'Window',
  'Performance',
  'HtmlMediaElement',
  'HtmlAudioElement',
]

[profile.release]
opt-level = "s"